Reproducible Research week 2 project

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -4,22 +4,136 @@ output:
   html_document:
     keep_md: true
 ---
-
+## Loading libraries
+To begin, we'll load the used libraries:
+````{r}
+library(ggplot2)
+library(dplyr)
+````
 
 ## Loading and preprocessing the data
+First, let's unzip and load the file.
+````{r, echo=T}
+unzip("./activity.zip")
+Factivity <- read.csv("./activity.csv")
+summary(Factivity)
 
-
+````
+Since the "date" column is a character, let's change it to date! Also, make a pairs plot to see eventual correlations
+````{r, echo=T}
+Factivity$date<- as.Date(Factivity$date,"%Y-%m-%d")
+summary(Factivity)
+pairs(Factivity)
+````
 
 ## What is mean total number of steps taken per day?
-
-
+To calculate the total of steps:
+````{r, echo=T}
+sum(Factivity$steps,na.rm=T)
+````
+That, however, doesn't show the mean per day. We should use a correlation:
+````{r, echo=T}
+Steps.Day<- aggregate(steps ~ date, Factivity, sum, na.rm=F)
+````
+Now we can make a histogram of the steps taken per day!
+````{r, echo=T}
+hist(Steps.Day$steps, main="Histogram of Steps per day", xlab="Steps")
+````
+To calculate the mean and median steps per day, we can go on two directions. One of them is making each operation one by one:
+````{r, echo=T}
+mediansteps<- median(Steps.Day$steps)
+meansteps<- mean(Steps.Day$steps)
+mediansteps
+meansteps
+````
+That way, we've stored the median steps at variable mediansteps and the mean steps per day at the variable meansteps. However, we can use the summary command and it will show those infos and more at once:
+````{r, echo=T}
+options(digits=10) #use this to avoid roundings by R
+summary(Steps.Day$steps)
+````
+So, when using summary(), we get not only the median and mean, but also the quantiles, min and max values!
 
 ## What is the average daily activity pattern?
 
-
+To make a line plot, we'll first apply the mean and remove NA, then plot the variable created and name the labels. 
+````{r,, echo=T}
+IntervalSteps <- tapply(Factivity$steps,Factivity$interval, mean, na.rm=T)
+plot(as.numeric(names(IntervalSteps)),
+     IntervalSteps,
+     xlab = "interval",
+     ylab = "steps",
+     main = "Avg daily activity",
+     type = "l")
+                  
+````
+Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+````{r,echo=T}
+maxInt <- names(sort(IntervalSteps, decreasing=T)[1])
+maxStep<- sort(IntervalSteps, decreasing=T)[1]
+maxInt
+maxStep
+````
+The interval associated with maximum activity is the one numbered 835, with 206.1698113 steps.
 
 ## Imputing missing values
+1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+````{r,echo=T}
+sum(is.na(Factivity$steps))
+````
+There are 2304 missing values!
 
+So I will fill the missing data with the mean of available steps per dates for that interval, using the IntervalSteps variable created before
+```{r, echo=T}
+Asplit <- split(Factivity, Factivity$interval)
+for (i in 1:length(Asplit)){
+    Asplit[[i]]$steps[is.na(Asplit[[i]]$steps)] <- IntervalSteps[i]
+}
+filledActivity<- do.call("rbind",Asplit)
+filledActivity<- filledActivity[order(filledActivity$date),]
+````
+Now let's make a histogram of the total number of steps taken  each day and calculate and report the mean and median:
+````{r,echo=T}
+Steps.Day.Filled <- tapply(filledActivity$steps, filledActivity$date,sum)
+hist(Steps.Day.Filled, xlab="Steps",main="Histogram of Steps per Day - filled data")
+````
+As before, to calculate the mean:
+````{r,echo=T}
+mean(Steps.Day.Filled,na.rm=T)
+````
 
+And to calculate the median:
+````{r,echo=T}
+median(Steps.Day.Filled,na.rm=T)
+````
+As one can see, those values differ from the ones calculated before, at the first part of the assignment. By filling the NAs with median, that alters the mean and median - it's a presumption done by the analyst
 
 ## Are there differences in activity patterns between weekdays and weekends?
+First we will create a new factor withh weedays and weekends.
+````{r,echo=T}
+Sys.setlocale("LC_TIME", "English") #change the language to English in for the function to work properly, otherwise it won't filter correctly
+Days.Act <- Factivity[complete.cases(Factivity),] %>% 
+    mutate(Weekday = weekdays(date))%>%
+    mutate(Weekend = ifelse(Weekday == "Saturday" | Weekday == "Sunday", "Weekend","Weekday"))
+````
+Now let's plot Weekdays vs Weekends:
+````{r,echo=T}
+Days.Act %>%
+  group_by(Weekend, interval) %>% 
+  mutate(meanStepsInterval = mean(steps)) %>%
+  ggplot(aes(interval, meanStepsInterval)) + geom_line() +
+  facet_wrap(~Weekend) +
+  ggtitle("Mean Steps/Interval: Weekdays vs. Weekends") +
+  xlab("Interval") +
+  ylab("Mean Steps")
+````
+At last, we'll create a panel plot with the time series plot of the 5-minute interval(x) and the average number of steps taken, averaged across all weekdays (y)
+````{r,echo=T}
+Days.Act %>%
+  group_by(Weekday, interval) %>%
+  mutate(meanStepsInterval = mean(steps)) %>%
+  ggplot(aes(interval, meanStepsInterval)) + geom_line() +
+  facet_wrap(~Weekday) +
+  ggtitle("Mean steps by interval per day of the week") +
+  xlab("Interval") +
+  ylab("Mean Steps")
+````
